--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
